update gradle version gradle-7.2

--- a/permission/gradle.properties
+++ b/permission/gradle.properties
@@ -18,4 +18,4 @@ LIB_ARTIFACT=permission
 LIB_EXTENSION=aar
 LIB_VERSION_CODE=1
 LIB_VERSION_NAME=0.0.1-alpha
-LIB_DES=location amap impl
+LIB_DES=permission request tools
