--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,8 @@ buildscript {
     ext.kotlin_version = "1.5.21"
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.3'
@@ -17,7 +18,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
